# course_4

./: README.md  pyproject.toml
src/: all_data.json  functions.py  main_code.py  results.xlsx  save_data.py  vacancies_collector.py  vacancy.py
