[tool.poetry]
name = "course-4"
version = "0.1.0"
description = ""
authors = ["ViolettaP <violetta.pukhova@mail.ru>"]
readme = "README.md"
packages = [{include = "course_4"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pandas = "^2.0.2"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
